--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,12 +3,7 @@
     <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
     <hr />
     <ul class="list-group">
-      <a
-        href="#"
-        class="list-group-item"
-        style="cursor: pointer;"
-        *ngFor="let ingredient of ingredients"
-      >
+      <a class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
     </ul>
