--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,6 +4,10 @@
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-item>
+    <app-recipe-item
+      *ngFor="let recipe of recipes; index as i"
+      [recipe]="recipe"
+      [index]="i"
+    ></app-recipe-item>
   </div>
 </div>
