--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,5 +1,9 @@
 <div class="row">
-  <div class="col-xs-12"><button class="btn btn-success">New Recipe</button></div>
+  <div class="col-xs-12">
+    <button [routerLink]="['new']" routerLinkActive="router-link-active" class="btn btn-success">
+      New Recipe
+    </button>
+  </div>
 </div>
 <hr />
 <div class="row">
