implemented recipe edit form

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,17 +20,24 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddIngredients()" style="cursor: pointer;">To Shopping List</a></li>
         <li>
-          <a [routerLink]="['edit']" routerLinkActive="active" style="cursor: pointer;"
+          <a (click)="onAddIngredients()" style="cursor: pointer;"
+            >To Shopping List</a
+          >
+        </li>
+        <li>
+          <a
+            [routerLink]="['edit']"
+            routerLinkActive="active"
+            style="cursor: pointer;"
             >Edit Recipe</a
           >
         </li>
         <li>
           <a
-            [routerLink]="['/recipes', id, 'delete']"
             routerLinkActive="router-link-active"
             style="cursor: pointer;"
+            (click)="onDeleteRecipe()"
             >Delete Recipe</a
           >
         </li>
