--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,15 +10,30 @@
           <a [routerLink]="['/recipes']" routerLinkActive="active">Recipes</a>
         </li>
         <li>
-          <a [routerLink]="['/shopping-list']" routerLinkActive="active">Shopping List</a>
+          <a [routerLink]="['/shopping-list']" routerLinkActive="active"
+            >Shopping List</a
+          >
+        </li>
+        <li>
+          <a [routerLink]="['/auth']" routerLinkActive="active">Login</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button"
+            >Manage <span class="caret"></span
+          ></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer;">Save Data</a></li>
-            <li><a style="cursor: pointer;">Fetch Data</a></li>
+            <li>
+              <a style="cursor: pointer;" (click)="onSaveRecipes()"
+                >Save Data</a
+              >
+            </li>
+            <li>
+              <a style="cursor: pointer;" (click)="onFetchRecipes()"
+                >Fetch Data</a
+              >
+            </li>
           </ul>
         </li>
       </ul>
