--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,6 +19,9 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a style="cursor: pointer;">Logout</a>
+        </li>
         <li class="dropdown" appDropdown>
           <a class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
